--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -6,24 +6,23 @@
             <div class="title-of-board">Board</div>
             <div class="headline-right-side">
                 <div id="searchMenu" class="search-menu">
-                    <input placeholder="Find task" required id="searchTask" oninput="searchTask()" class="search-task"
+                    <input placeholder="Find task" required id="searchTask" (input)="searchTask()" class="search-task"
                         type="text">
                     <div class="search-icon-container">
                         <button disabled class="search-button"><img class="search-icon"
-                                src="assets/img/search.png"></button>
+                                src="./assets/img/search.png"></button>
                     </div>
                 </div>
-                <div onclick="addTask('toDo')" class="add-task-btn-board">Add task <img
-                        src="assets/img/plus-icon-white.svg">
+                <div (click)="addTask()" class="add-task-btn-board">Add task <img
+                        src="./assets/img/plus-icon-white.svg">
                 </div>
             </div>
         </div>
-
         <div class="tasks-board">
             <div id="dropArea-1" class="drag-drop-area-1 drag-drop-containers">
                 <div class="title-1 title">
                     <div>To do</div>
-                    <div onclick="addTask('toDo')">
+                    <div (click)="addTask()">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -41,7 +40,7 @@
             <div id="dropArea-2" class="drag-drop-area-2 drag-drop-containers">
                 <div class="title-2 title">
                     <div class="title-task-area">In progress</div>
-                    <div onclick="addTask('inProgress')">
+                    <div (click)="addTask()">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -56,12 +55,10 @@
                     ondrop="moveTo('inProgress',event,'taskArea-2')" ondragover="allowDrop(event)">
                 </div>
             </div>
-
-
             <div id="dropArea-3" class="drag-drop-area-3 drag-drop-containers">
                 <div class="title-3 title">
                     <div>Await Feedback</div>
-                    <div onclick="addTask('awaitingFeedback')">
+                    <div (click)="addTask()">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -76,11 +73,10 @@
                     ondrop="moveTo('awaitingFeedback',event,'taskArea-3')" ondragover="allowDrop(event)">
                 </div>
             </div>
-
             <div id="dropArea-4" class="drag-drop-area-4 drag-drop-containers">
                 <div class="title-4 title">
                     <div>Done</div>
-                    <div onclick="addTask('done')">
+                    <div (click)="addTask()">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -93,6 +89,150 @@
                 <div id="taskArea-4" class="tasks-area-4 task-area" ondragleave="ondragLeave('taskArea-4')"
                     ondragenter="ondragEnter('taskArea-4')" ondragend="finishedDragging()"
                     ondrop="moveTo('done',event,'taskArea-4')" ondragover="allowDrop(event)">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="overlay" *ngIf="addTaskToBoard">
+        <div class="popup-container">
+            <div id="taskCard" class="task-card">
+                <h1>Add Task</h1>
+                <div [formGroup]="taskForm" class="column-container">
+                    <div class="column-left">
+                        <label>Title</label>
+                        <input type="text" placeholder="Enter a title" formControlName="title">
+                        <div *ngIf="taskForm.controls['title'].invalid && taskForm.controls['title'].touched">
+                            <div class="error-massage" *ngIf="taskForm.controls['title'].errors?.['required']">
+                                Title is required.
+                            </div>
+                        </div>
+                        <label class="mt-15">Description</label>
+                        <textarea placeholder="Enter a description" formControlName="description"></textarea>
+                        <div
+                            *ngIf="taskForm.controls['description'].invalid && taskForm.controls['description'].touched">
+                            <div class="error-massage" *ngIf="taskForm.controls['description'].errors?.['required']">
+                                Description is
+                                required.
+                            </div>
+                        </div>
+                        <label class="mt-15">Category</label>
+                        <div class="category-input-container">
+                            <div class="dropdown-selection">
+                                <input readonly value="Select task category">
+                                <img class="drop-down" src="./assets/img/icon_triangle.png"
+                                    (click)="toggleEditCategory()">
+                            </div>
+                            <div class="dropdown-container" *ngIf="openCategory">
+                                <div class="category-list-overflow">
+                                    <div class="category" (click)="updateEditCategory($event)" data-target="0">
+                                        <div class="category-text" (click)="toggleShowInput()">
+                                            <span *ngIf="!showInput">{{ categories[0] }}</span>
+                                        </div>
+                                        <input class="category-input" [hidden]="!showInput"
+                                            formControlName="newCategory">
+                                        <div class="category-oninput" *ngIf="addCategory && showInput">
+                                            <img src="./assets/img/icon_clear.png" (click)="cancelCategory()">
+                                            <img src="./assets/img/icon_done.png" (click)="confirmCategory()">
+                                        </div>
+                                    </div>
+                                    <div class="category" *ngFor="let category of categories.slice(1); let i = index"
+                                        (click)="updateEditCategory($event)" attr.data-target="{{ i + 1 }}">
+                                        <div class="category-text">{{ category }}</div>
+                                        <div (click)="selectColor(i)" class="color-dot" [ngClass]="getColorClass(i)">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div (click)="customizeColor($event)" class="colorContainer" *ngIf="editingCategory">
+                                <div (click)="selectedTargetIndex = 0" class="color-dot-orange"
+                                    [class.selected]="selectedTargetIndex === 0"></div>
+                                <div (click)="selectedTargetIndex = 1" class="color-dot-red"
+                                    [class.selected]="selectedTargetIndex === 1"></div>
+                                <div (click)="selectedTargetIndex = 2" class="color-dot-blue"
+                                    [class.selected]="selectedTargetIndex === 2"></div>
+                                <div (click)="selectedTargetIndex = 3" class="color-dot-lightblue"
+                                    [class.selected]="selectedTargetIndex === 3"></div>
+                                <div (click)="selectedTargetIndex = 4" class="color-dot-pink"
+                                    [class.selected]="selectedTargetIndex === 4"></div>
+                                <div (click)="selectedTargetIndex = 5" class="color-dot-lightpink"
+                                    [class.selected]="selectedTargetIndex === 5"></div>
+                                <div (click)="selectedTargetIndex = 6" class="color-dot-green"
+                                    [class.selected]="selectedTargetIndex === 6"></div>
+                                <div (click)="selectedTargetIndex = 7" class="color-dot-turquo"
+                                    [class.selected]="selectedTargetIndex === 7"></div>
+                            </div>
+                        </div>
+                        <label>Assigned to</label>
+                        <div class="contact-input-container">
+                            <div class="dropdown-selection">
+                                <input readonly value="Select contacts to assign">
+                                <img class="drop-down" src="./assets/img/icon_triangle.png"
+                                    (click)="toggleAssignedToContact()">
+                            </div>
+                        </div>
+                        <div class="dropdown-container" *ngIf="openAssignedTo">
+                            <div class="contact-list-overflow">
+                                <ul *ngIf="contactInList">
+                                    <li *ngFor="let contact of contacts">
+                                        <div class="contact-box" (click)="toggleBetweenContacts(contact.id)">
+                                            <a href="#">
+                                                <div class="initials-container" [style.background]="contact.color">{{
+                                                    contact.initials }}</div>
+                                            </a>
+                                            <div class="name-mail-container">
+                                                <div>{{ contact.name }}</div>
+                                                <div>{{ contact.email }}</div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column-right">
+                        <label>Due Date</label>
+                        <input type="date" min="2023-05-30" formControlName="date">
+                        <!-- {{ date | date:'yyyy-MM-dd' }} -->
+                        <div *ngIf="taskForm.controls['date'].invalid && taskForm.controls['date'].touched">
+                            <div class="error-massage" *ngIf="taskForm.controls['date'].errors?.['required']">
+                                Title is required.
+                            </div>
+                        </div>
+                        <label class="mt-15">Prio</label>
+                        <div class="prio">
+                            <div class="prio-btn">Urgent
+                                <img src="./assets/img/icon_up.png" alt="#">
+                            </div>
+                            <div class="prio-btn">Medium
+                                <img src="./assets/img/icon_medium.png" alt="#">
+                            </div>
+                            <div class="prio-btn">Low
+                                <img src="./assets/img/icon_down.png" alt="#">
+                            </div>
+                        </div>
+                        <label class="mt-15">Subtasks</label>
+                        <div class="subtask-input-container">
+                            <div class="subtask">
+                                <input type="text" placeholder="Enter a subtask" formControlName="newSubtask">
+                                <div class="subtask-oninput">
+                                    <img src="./assets/img/icon_clear.png" (click)="cancelSubtask()">
+                                    <img src="./assets/img/icon_done.png" (click)="confirmSubtask()">
+                                </div>
+                            </div>
+                            <div class="dropdown-container" *ngIf="openSubtask">
+                                <div class="subtask-list-overflow">
+                                    <div class="subtasks" *ngFor="let subtask of subtasks; let s = index"
+                                        attr.data-target="{{ s + 1 }}">
+                                        <div class="subtask-text">{{ subtask }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="action-button-container">
+                            <button (click)="clearTaskForm()">Clear<img src="./assets/img/icon_close.png"></button>
+                            <button (click)="createTask()">Create Task<img src="./assets/img/icon_create.png"></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
