--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,10 +1,14 @@
-<img src="assets/img/join_logo_light.png" alt="#" />
-<div class="nav-item"><img src="./assets/img/summary_normal.png" alt="#" /><span>Summary</span>
+<div>
+    <div>
+        <img src="assets/img/join_logo_light.png" alt="#" />
+    </div>
+    <div class="nav-item"><img src="./assets/img/summary_normal.png" alt="#" /><span>Summary</span>
+    </div>
+    <div class="nav-item"><img src="assets/img/addtask_normal.png" alt="#" /><span>Add Task</span>
+    </div>
+    <div class="nav-item"><img src="assets/img/board_normal.png" alt="#" /><span>Board</span>
+    </div>
+    <div class="nav-item"><img src="assets/img/icon_vector_contacts.png" alt="#" /><span>Contacts</span>
+    </div>
+    <div class="nav-item legal-notice"><img src="assets/img/icon_legal_notice.png" alt="#" /><span>Legal Notice</span></div>
 </div>
-<div class="nav-item"><img src="assets/img/addtask_normal.png" alt="#" /><span>Add Task</span>
-</div>
-<div class="nav-item"><img src="assets/img/board_normal.png" alt="#" /><span>Board</span>
-</div>
-<div class="nav-item"><img src="assets/img/icon_vector_contacts.png" alt="#" /><span>Contacts</span>
-</div>
-<div class="nav-item legal-notice"><img src="assets/img/icon_legal_notice.png" alt="#" /><span>Legal Notice</span></div>
