--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -13,16 +13,16 @@
                                 src="./assets/img/search.png"></button>
                     </div>
                 </div>
-                <div (click)="addTask()" class="add-task-btn-board">Add task <img
+                <div (click)="addTask('generell')" class="add-task-btn-board">Add task <img
                         src="./assets/img/plus-icon-white.svg">
                 </div>
             </div>
         </div>
         <div class="tasks-board">
-            <div id="dropArea-1" class="drag-drop-area-1 drag-drop-containers">
+            <div #dropAreaOne class="drag-drop-area-1 drag-drop-containers">
                 <div class="title-1 title">
                     <div>To do</div>
-                    <div (click)="addTask()">
+                    <div (click)="addTask('todo')">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -32,15 +32,20 @@
                         </svg>
                     </div>
                 </div>
-                <div id="taskArea-1" class="tasks-area-1 task-area" ondragleave="ondragLeave('taskArea-1')"
-                    ondragenter="ondragEnter('taskArea-1')" ondragend="finishedDragging()"
-                    ondrop="moveTo('toDo',event,'taskArea-1')" ondragover="allowDrop(event)">
-                </div>
+                <div *ngFor="let contact of contacts" class="task" cdkDrag>
+                    <div class="title-1 title">{{ contact.name }}</div>
+                    <div class="task-area" cdkDropList (cdkDropListDropped)="drop($event)">
+                      <div *ngFor="let task of contact.tasks" cdkDrag>
+                        <div class="task-title">{{ task.title }}</div>
+                        <div class="task-description">{{ task.description }}</div>
+                      </div>
+                    </div>
+                </div>      
             </div>
-            <div id="dropArea-2" class="drag-drop-area-2 drag-drop-containers">
+            <div #dropAreaTwo class="drag-drop-area-2 drag-drop-containers">
                 <div class="title-2 title">
                     <div class="title-task-area">In progress</div>
-                    <div (click)="addTask()">
+                    <div (click)="addTask('inProgress')">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -55,10 +60,10 @@
                     ondrop="moveTo('inProgress',event,'taskArea-2')" ondragover="allowDrop(event)">
                 </div>
             </div>
-            <div id="dropArea-3" class="drag-drop-area-3 drag-drop-containers">
+            <div #dropAreaThree class="drag-drop-area-3 drag-drop-containers">
                 <div class="title-3 title">
                     <div>Await Feedback</div>
-                    <div (click)="addTask()">
+                    <div (click)="addTask('awaitingFeedback')">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -73,10 +78,10 @@
                     ondrop="moveTo('awaitingFeedback',event,'taskArea-3')" ondragover="allowDrop(event)">
                 </div>
             </div>
-            <div id="dropArea-4" class="drag-drop-area-4 drag-drop-containers">
+            <div #dropAreaFour class="drag-drop-area-4 drag-drop-containers">
                 <div class="title-4 title">
                     <div>Done</div>
-                    <div (click)="addTask()">
+                    <div (click)="addTask('done')">
                         <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
                         " xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
