--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -554,6 +554,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     cursor: pointer;
 }
 
+/* drag and drop container */
+
+.drag-drop-containers {
+    max-height: 625px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 /* prio container */
 .prio {
     display: flex;
