--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -270,7 +270,7 @@
                         </div>
                         <div class="action-button-container">
                             <button (click)="clearTaskForm()">Clear<img src="./assets/img/icon_close.png"></button>
-                            <button (click)="createTask()">Create Task<img src="./assets/img/icon_create.png"></button>
+                            <button (click)="createTask('id')">Create Task<img src="./assets/img/icon_create.png"></button>
                         </div>
                     </div>
                 </div>
